--- a/YAYA/ablog/blog/templates/base.html
+++ b/YAYA/ablog/blog/templates/base.html
@@ -33,6 +33,9 @@
       <li class="nav-item">
         <a class="nav-link" href={% url "logout"%}  >Cerrar Sesión</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href={% url "editprofile"%}  >Editar Perfil</a>
+      </li>
       {%else%}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
