--- a/YAYA/ablog/blog/templates/article_details.html
+++ b/YAYA/ablog/blog/templates/article_details.html
@@ -12,12 +12,31 @@
 {{ post.body|safe }}<br/>
 <br/>
 <small>{{post.create_on}}</small>
-
+<hr></hr>
 <br/><br/>
 <a href="{% url "home" %}" class="btn btn-primary">Volver a publicaciones</a>  {%if user.is_superuser%} {%if user.id == post.author.id%} ‍  ‍  ‍  ‍  ‍  ‍  ‍<a href="{% url "updatepost" post.pk %}" class="btn btn-warning">Editar</a>  ‍   ‍   ‍ <a href="{% url "deletepost" post.pk %}" class="btn btn-danger">Borrar</a>
 <br/><br/><br/><br/><br/>
  {%endif%}
  {%endif%}
+ <br/><br/><br/><br/>
+ 
+<h3>Comentarios: </h3> 
+{%if user.is_authenticated%}
+<P align="right"><a href="{% url "addcomment" post.pk %}" class="btn btn-info">Añadir Comentario</a>
+{% else %}
+<P align="right">Debes iniciar sesión para comentar.</p>
+{% endif %}
+<hr></hr>
+{% if not post.comments.all %}
+    Aún no hay comentarios.
+{% else %}
+    {%for comment in post.comments.all%}
+        <strong>{{comment.author.first_name}} {{comment.author.last_name}}</strong> - {{comment.create_on}}
+        <br/><br/>
+        {{comment.body}}
+        <hr></hr>
+    {% endfor %}
+{% endif %}
  <br/><br/><br/><br/><br/><br/>
  {% endblock %}
 
