--- a/YAYA/ablog/blog/templates/addpost.html
+++ b/YAYA/ablog/blog/templates/addpost.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 
-{%if user.is_superuser%}
+{%if user.is_authenticated%}
 <h1> Crea una publicación </h1>
 <br/><br/>
 
