--- a/YAYA/ablog/blog/templates/updatepost.html
+++ b/YAYA/ablog/blog/templates/updatepost.html
@@ -3,7 +3,7 @@
 Edita tu publicación.
 {% endblock %}
 {% block content %}
-{%if user.is_superuser %}
+{%if user.is_authenticated %}
     {%if user.id == post.author.id%}
         <h1> Edita tu publicación </h1>
         <br/><br/>
