--- a/YAYA/ablog/blog/templates/deletepost.html
+++ b/YAYA/ablog/blog/templates/deletepost.html
@@ -3,7 +3,7 @@
 Borra tu publicación.
 {% endblock %}
 {% block content %}
-{%if user.is_superuser %}
+{%if user.is_authenticated %}
 {%if user.id == post.author.id%}
 <h1> Borra tu publicación </h1>
 <br/><br/>
