--- a/YAYA/ablog/blog/templates/home.html
+++ b/YAYA/ablog/blog/templates/home.html
@@ -4,7 +4,7 @@
   <center><h1 class="display-4">Publicaciones</h1></center>
   <center><p class="lead">Aquí puedes ver todas las publicaciones disponibles, recuerda que solo puedes editar o borrar las tuyas!</p></center>
   <hr class="my-4">
-  {%if user.is_superuser%}
+  {%if user.is_authenticated%}
   <center><a class="btn btn-primary btn-lg" href="{% url "addpost" %}" role="button">Crear publicación</a></center>
   {%else%}
   {%endif%}
@@ -14,13 +14,13 @@
 {% for post in object_list %}
 <hr>
     <h3 class="mt-5">{{ post.title }}</h3>
-    {%if post.author.is_superuser%}<b>PROFESOR </b>{%endif%}{{ post.author.first_name }} {{ post.author.last_name }} - {{ post.author.email }}<br><br/>
+    {%if post.author.is_superuser%}<b>[STAFF] </b>{%else%}<b>[ALUMNO] </b>{%endif%}{{ post.author.first_name }} {{ post.author.last_name }} - {{ post.author.email }}<br><br/>
     {{ post.body|safe}} <!--slice:"90"-->
     </br></br>
     <small>{{post.create_on}}</small>
 </hr></br></br>
 <P align="right"><a href="{% url "article-detail" post.pk %}" class="btn btn-primary">Ver publicación</a>
- {%if user.is_superuser%}
+ {%if user.is_authenticated%}
  {%if user.id == post.author.id%}  ‍   ‍   ‍ <a href="{% url "updatepost" post.pk %}" class="btn btn-warning">Editar</a>  ‍   ‍   ‍ <a href="{% url "deletepost" post.pk %}" class="btn btn-danger">Borrar</a></p>
 
 <hr></hr>
